--- a/Practice Projects/age-calculator-app-main/app/scss/global/_boilerplate.scss
+++ b/Practice Projects/age-calculator-app-main/app/scss/global/_boilerplate.scss
@@ -23,3 +23,16 @@ main {
   min-height: 100vh;
   padding-inline: u.rem(20);
 }
+
+a,
+a:hover,
+a:visited {
+  color: var(--off-black);
+  text-decoration: none;
+}
+.attribution {
+  font-family: Helvetica, sans-serif;
+  font-size: 11px;
+  text-align: center;
+  margin-bottom: u.rem(5);
+}
