Desktop styles for sub-menu

--- a/Practice Projects/intro-section-with-dropdown-navigation-main/scss/components/_index.scss
+++ b/Practice Projects/intro-section-with-dropdown-navigation-main/scss/components/_index.scss
@@ -1,3 +1,4 @@
-@forward "nav";
-@forward "main-component";
-@forward "footer";
+@forward 'nav';
+@forward 'sub-menu-desktop.scss';
+@forward 'main-component';
+@forward 'footer';
