--- a/Practice Projects/intro-section-with-dropdown-navigation-main/scss/components/_sub-menu-desktop.scss
+++ b/Practice Projects/intro-section-with-dropdown-navigation-main/scss/components/_sub-menu-desktop.scss
@@ -10,12 +10,16 @@
   &__list-item {
     display: flex;
     align-items: center;
-    padding-bottom: 12px;
-    gap: 12px;
+    padding-bottom: 0.75rem;
+    gap: 0.75rem;
   }
 }
 
 .sub-menu-2 {
   @extend %sub-menu;
   left: 19%;
+}
+
+.display-none {
+  display: none;
 }
