--- a/Practice Projects/intro-section-with-dropdown-navigation-main/scss/components/_main-component.scss
+++ b/Practice Projects/intro-section-with-dropdown-navigation-main/scss/components/_main-component.scss
@@ -1,7 +1,6 @@
 @use '../utils/' as u;
 .intro-section {
   @include u.breakpoints-up(large) {
-    // width: min(100% - 16.5rem, 1164px);
     width: min(90vw, 1164px);
 
     display: grid;
@@ -18,9 +17,6 @@
     grid-area: image-container;
 
     @include u.breakpoints-up(large) {
-      // display: block;
-      // width: 80%;
-      //width: 87%;
       width: 100%;
     }
 
@@ -28,9 +24,13 @@
       width: 100%;
       object-fit: contain;
       @include u.breakpoints-up(large) {
-        // display: block;
-        // width: 100%;
-        width: 365px;
+        width: 100%;
+        height: 543.733px;
+      }
+
+      @include u.breakpoints-up(x-large) {
+        width: 560px;
+        height: 560px;
       }
     }
     img.mobile-img {
@@ -44,7 +44,6 @@
       display: none;
       @include u.breakpoints-up(large) {
         display: block;
-        // width: 70%;
       }
     }
   }
@@ -56,62 +55,81 @@
     padding-inline: 0.8rem;
 
     @include u.breakpoints-up(large) {
-      // margin-top: 2rem;
+      margin-top: 9.3rem;
       display: flex;
       justify-content: center;
       align-items: flex-start;
       flex-direction: column;
-      gap: 30px;
       text-align: left;
+      margin-inline-start: 4.125rem;
     }
 
     h1 {
+      margin-bottom: 1.25rem;
       @include u.breakpoints-up(large) {
-        font-size: 3rem;
-        padding-right: 13.5rem;
-        // padding-top: 1rem;
+        font-size: 2.8rem;
+        letter-spacing: 0.0625rem;
+      }
+
+      @include u.breakpoints-up(x-large) {
+        font-size: 3.67rem;
+      }
+      .br {
+        @include u.breakpoints-up(large) {
+          margin-left: 10rem;
+        }
       }
     }
     p {
       text-align: center;
       margin-top: 0.6rem;
-      font-size: 1rem;
+      font-size: 0.91875rem;
+      padding-inline: 0.75rem;
+      padding-bottom: 1.25rem;
+      margin-bottom: 1.5625rem;
+      line-height: 1.6;
       color: var(--medium-gray);
 
       @include u.breakpoints-up(large) {
         text-align: left;
-        padding-right: 7rem;
+        padding-right: 7.123rem;
+        padding-left: 0;
       }
     }
 
-    /* a {
-      display: inline-block;
+    a {
+      @extend %border;
+      font-size: 0.8125rem;
+      padding: 0.75rem;
+      padding-inline: 1.25rem;
       background-color: var(--almost-black);
-      padding: 0.7rem 0.9rem;
       color: var(--almost-white);
-      border-radius: 1rem;
-      margin-top: 1.5rem;
       transition: all 0.3s linear;
       cursor: pointer;
-
+      margin-top: 20px;
       &:hover {
         background-color: transparent;
-        border: 1px solid var(--almost-black);
+        border-color: var(--almost-black);
         color: var(--almost-black);
       }
-    } */
+    }
   }
 
   .sponsors-logo {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    gap: 1.5rem;
-    margin-top: 3rem;
+    gap: 0.7rem;
+    margin-top: 4.8rem;
 
     img {
-      width: 30%;
+      width: 17.172295363%;
       object-fit: contain;
+    }
+
+    @include u.breakpoints-up(large) {
+      margin-top: 2.8rem;
     }
   }
 }
