--- a/Practice Projects/intro-section-with-dropdown-navigation-main/scss/utils/_placeholders.scss
+++ b/Practice Projects/intro-section-with-dropdown-navigation-main/scss/utils/_placeholders.scss
@@ -11,9 +11,16 @@
   padding: 1.25rem 1.25rem 0.3125rem;
   background: var(--almost-white);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  cursor: pointer;
 
   p {
     font-size: 0.625rem;
     color: var(--medium-gray);
   }
+}
+
+%border {
+  border: 1px solid var(--medium-gray);
+  padding: 0.4375rem 0.8125rem;
+  border-radius: 0.4375rem;
 }
