Desktop navigation styles refactoring

--- a/Practice Projects/intro-section-with-dropdown-navigation-main/scss/components/_index.scss
+++ b/Practice Projects/intro-section-with-dropdown-navigation-main/scss/components/_index.scss
@@ -1,4 +1,5 @@
 @forward 'nav';
-@forward 'sub-menu-desktop.scss';
+@forward 'sub-menu-desktop';
+@forward 'mobile-nav';
 @forward 'main-component';
 @forward 'footer';
