--- a/Practice Projects/intro-section-with-dropdown-navigation-main/scss/components/_nav.scss
+++ b/Practice Projects/intro-section-with-dropdown-navigation-main/scss/components/_nav.scss
@@ -16,9 +16,6 @@ header {
       display: none;
     }
     cursor: pointer;
-    .close-btn {
-      display: none;
-    }
   }
   .hide_for_mobile {
     @include u.breakpoints-down(medium) {
@@ -44,8 +41,7 @@ header {
       }
 
       &:hover {
-        color: var(--almost-black);
-        transition: all 0.3s ease-in-out;
+        @extend %hover;
       }
     }
   }
@@ -55,6 +51,7 @@ header {
   &__list {
     @include u.flex(space-between);
     gap: 1.875rem;
+    color: var(--medium-gray);
 
     &-item {
       padding-right: 1rem;
@@ -64,8 +61,7 @@ header {
       }
 
       &:hover {
-        color: var(--almost-black);
-        transition: all 0.3s ease-in-out;
+        @extend %hover;
       }
     }
 
@@ -85,50 +81,10 @@ nav {
   display: block;
 }
 
-//? mobile nav styles
-
-.mobile-nav-container {
+.close {
   display: none;
-  background: gray;
-  padding: 1rem 2rem;
-  position: fixed;
-  top: 0;
-  right: 0;
-  min-height: 100vh;
 }
-.mobile-nav {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  flex-direction: column;
-  color: var(--medium-gray);
 
-  margin-top: 4rem;
-
-  &__list-item {
-    padding-bottom: 1.2rem;
-
-    img {
-      padding-left: 0.7rem;
-    }
-  }
-
-  &__links-btn {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    text-align: center;
-
-    a {
-      display: inline-block;
-      color: var(--medium-gray);
-      &:last-of-type {
-        @extend %border;
-      }
-    }
-  }
-
-  img.arrow-up {
-    display: inline-block;
-  }
+.close-btn {
+  display: none;
 }
