--- a/Practice Projects/intro-section-with-dropdown-navigation-main/scss/components/_sub-menu-desktop.scss
+++ b/Practice Projects/intro-section-with-dropdown-navigation-main/scss/components/_sub-menu-desktop.scss
@@ -8,16 +8,17 @@
   left: 80px;
 
   &__list-item {
-    display: flex;
-    align-items: center;
-    padding-bottom: 0.75rem;
-    gap: 0.75rem;
+    @extend %sub-menu-list-item;
   }
 }
 
 .sub-menu-2 {
   @extend %sub-menu;
   left: 19%;
+
+  p {
+    padding-bottom: 0.75rem;
+  }
 }
 
 .display-none {
