--- a/Practice Projects/intro-section-with-dropdown-navigation-main/scss/utils/_index.scss
+++ b/Practice Projects/intro-section-with-dropdown-navigation-main/scss/utils/_index.scss
@@ -1,3 +1,3 @@
-@forward "breakpoints";
-@forward "mixins";
-@forward "placeholders";
+@forward 'breakpoints';
+@forward 'placeholders';
+@forward 'mixins';
