--- a/Practice Projects/intro-section-with-dropdown-navigation-main/scss/utils/_placeholders.scss
+++ b/Practice Projects/intro-section-with-dropdown-navigation-main/scss/utils/_placeholders.scss
@@ -19,8 +19,20 @@
   }
 }
 
+%sub-menu-list-item {
+  display: flex;
+  align-items: center;
+  padding-bottom: 0.75rem;
+  gap: 0.75rem;
+}
 %border {
   border: 1px solid var(--medium-gray);
   padding: 0.4375rem 0.8125rem;
-  border-radius: 0.4375rem;
+  // border-radius: 0.4375rem;
+  border-radius: 0.625rem;
+}
+
+%hover {
+  color: var(--almost-black);
+  transition: all 0.3s ease-in-out;
 }
