--- a/Practice Projects/intro-section-with-dropdown-navigation-main/scss/components/_footer.scss
+++ b/Practice Projects/intro-section-with-dropdown-navigation-main/scss/components/_footer.scss
@@ -1,4 +1,4 @@
-@use "../utils/" as u;
+@use '../utils/' as u;
 
 footer {
   margin: 5rem 0 0;
@@ -10,7 +10,6 @@ footer {
     text-align: center;
   }
   a {
-    // color: hsl(228, 45%, 44%);
     color: var(--medium-gray);
   }
 }
