--- a/Practice Projects/intro-section-with-dropdown-navigation-main/scss/utils/_placeholders.scss
+++ b/Practice Projects/intro-section-with-dropdown-navigation-main/scss/utils/_placeholders.scss
@@ -1,5 +1,6 @@
+@use 'breakpoints' as b;
+
 %spacing {
-  // padding: 1.4rem;
   padding: 1rem 1rem 0.8rem;
 }
 
@@ -13,6 +14,9 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   cursor: pointer;
 
+  @include b.breakpoints-down(medium) {
+    display: none;
+  }
   p {
     font-size: 0.625rem;
     color: var(--medium-gray);
@@ -28,7 +32,6 @@
 %border {
   border: 1px solid var(--medium-gray);
   padding: 0.4375rem 0.8125rem;
-  // border-radius: 0.4375rem;
   border-radius: 0.625rem;
 }
 
