--- a/Practice Projects/advice-generator-app-main/app/scss/global/_boilerplate.scss
+++ b/Practice Projects/advice-generator-app-main/app/scss/global/_boilerplate.scss
@@ -1,3 +1,4 @@
+@use '../utils/' as u;
 html {
   font-size: 100%;
   box-sizing: border-box;
@@ -14,18 +15,18 @@ body {
   margin: 0;
   background: var(--DarkBlue);
   font-family: var(--font);
-  //   line-height: 1.3;
 }
 
 main {
   min-height: 100vh;
-  padding-inline: 20px;
-  font-size: 0.7rem;
-  //   display: grid;
-  //   align-items: center;
-  //   justify-items: center;
+  padding-inline: u.rem(20);
+  font-size: u.rem(11.2);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+p {
+  margin: 0;
 }
