--- a/Practice Projects/base-apparel-coming-soon-master/main.scss
+++ b/Practice Projects/base-apparel-coming-soon-master/main.scss
@@ -95,6 +95,7 @@ img {
   &__main {
     margin-top: 2.5rem;
     text-align: center;
+    margin-bottom: 1rem;
 
     @include breakpoint() {
       width: 500px;
@@ -122,10 +123,11 @@ img {
     form {
       margin-bottom: 1.5rem;
       input {
+        border: none;
         border-radius: 3rem;
-        border-color: var(--Dark-Grayish-Red);
+        border: 0.7px solid var(--Dark-Grayish-Red);
         width: 100%;
-        padding: 0.5rem;
+        padding: 0.6rem;
         position: relative;
 
         &:focus {
@@ -135,6 +137,21 @@ img {
         &::placeholder {
           padding-left: 1rem;
           color: var(--Dark-Grayish-Red);
+        }
+      }
+      .btn {
+        background-color: var(--Desaturated-Red);
+        position: absolute;
+        top: 105%;
+        left: 243px;
+        padding: 0.5rem;
+        padding-inline: 1.5rem;
+        border: none;
+        border-radius: 3rem;
+
+        @include breakpoint() {
+          top: 58%;
+          left: 37%;
         }
       }
     }
