--- a/Practice Projects/Expanse Tracker App/app/scss/utils/_placeholders.scss
+++ b/Practice Projects/Expanse Tracker App/app/scss/utils/_placeholders.scss
@@ -20,3 +20,16 @@
   justify-content: space-between;
   align-items: center;
 }
+
+@mixin grid() {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 200px);
+  gap: 2rem;
+}
+
+@mixin breakpoint() {
+  @media screen and (min-width: 810px) {
+    @content;
+  }
+}
