add x-large breakpoint for bigger screen and remove some sass variables

--- a/Practice Projects/find-me/sass/utils/_mixins.scss
+++ b/Practice Projects/find-me/sass/utils/_mixins.scss
@@ -2,6 +2,7 @@
 @use 'pixel-converter' as pixel;
 $breakpointUp: (
   'large': pixel.em(768),
+  'x-large': pixel.em(1024),
 );
 
 @mixin breakpointUp($size) {
