--- a/Practice Projects/find-me/sass/utils/_variables.scss
+++ b/Practice Projects/find-me/sass/utils/_variables.scss
@@ -4,7 +4,8 @@ $clearButtonColor: hsl(0, 0%, 85%);
 $backgroundColor: hsl(0, 0%, 100%);
 $fontColor: hsl(0, 0%, 0%);
 $logoBlue: hsl(218, 82%, 61%);
-$logoRed: hsl(359, 70%, 53%);
+$logoDark: hsl(0, 14%, 7%);
+$logoCrimson: hsl(348, 83%, 47%);
 $logoYellow: hsl(45, 100%, 51%);
 $logoGreen: hsl(131, 51%, 48%);
 $linkColor: hsl(245, 86%, 36%);
